co-admin ui completed ....

--- a/dccwebproject/loginapp/templates/loginapp/index2.html
+++ b/dccwebproject/loginapp/templates/loginapp/index2.html
@@ -329,21 +329,12 @@
             <li class="active"><a href="#"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
           </ul>
         </li>
-        <li class="treeview">
-          <a href="#">
-            <i class="fa fa-files-o"></i>
-            <span>Layout Options</span>
-            <span class="pull-right-container">
-              <span class="label label-primary pull-right">4</span>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li><a href="pages/layout/top-nav.html"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
-            <li><a href="pages/layout/boxed.html"><i class="fa fa-circle-o"></i> Boxed</a></li>
-            <li><a href="pages/layout/fixed.html"><i class="fa fa-circle-o"></i> Fixed</a></li>
-            <li><a href="pages/layout/collapsed-sidebar.html"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a></li>
-          </ul>
-        </li>
+        <li>
+        <a href="{% url 'loginapp:coregister' %}">
+          <i class="fa fa-files-o"></i> <span>Add co-Admin</span>
+
+        </a>
+      </li>
         <li>
           <a href="pages/widgets.html">
             <i class="fa fa-th"></i> <span>Widgets</span>
@@ -410,7 +401,7 @@
           </ul>
         </li>
         <li>
-          <a href="pages/calendar.html">
+          <a href="{% url 'loginapp:calendar' %}">
             <i class="fa fa-calendar"></i> <span>Calendar</span>
             <span class="pull-right-container">
               <small class="label pull-right bg-red">3</small>
