--- a/dccwebproject/loginapp/templates/loginapp/calendar.html
+++ b/dccwebproject/loginapp/templates/loginapp/calendar.html
@@ -329,21 +329,12 @@
               <li><a href="{% url 'loginapp:dash2' %}"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
             </ul>
           </li>
-          <li class="treeview">
-            <a href="#">
-            <i class="fa fa-files-o"></i>
-            <span>Layout Options</span>
-            <span class="pull-right-container">
-              <span class="label label-primary pull-right">4</span>
-            </span>
+          <li>
+          <a href="{% url 'loginapp:coregister' %}">
+            <i class="fa fa-files-o"></i> <span>Add co-Admin</span>
+
           </a>
-            <ul class="treeview-menu">
-              <li><a href="layout/top-nav.html"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
-              <li><a href="layout/boxed.html"><i class="fa fa-circle-o"></i> Boxed</a></li>
-              <li><a href="layout/fixed.html"><i class="fa fa-circle-o"></i> Fixed</a></li>
-              <li><a href="layout/collapsed-sidebar.html"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a></li>
-            </ul>
-          </li>
+        </li>
           <li>
             <a href="widgets.html">
             <i class="fa fa-th"></i> <span>Widgets</span>
