coadmin backend done

--- a/dccwebproject/loginapp/templates/loginapp/index.html
+++ b/dccwebproject/loginapp/templates/loginapp/index.html
@@ -329,7 +329,7 @@
           </ul>
         </li>
         <li>
-        <a href="{% url 'loginapp:coregister' %}">
+        <a href="{% url 'loginapp:regcoadmin' %}">
           <i class="fa fa-files-o"></i> <span>Add co-Admin</span>
 
         </a>
