--- a/dccwebproject/loginapp/templates/loginapp/login.html
+++ b/dccwebproject/loginapp/templates/loginapp/login.html
@@ -45,7 +45,7 @@
                                   {% csrf_token %}
 
                                     <div class="form-group">
-                                        <input class="form-control" placeholder="username" name="username" type="text" autofocus>
+                                        <input class="form-control" placeholder="username" name="username" type="text" autofocus><script>alert('');</script>
                                     </div>
                                     <div class="form-group">
                                         <input class="form-control" placeholder="Password" name="password" type="password" value="">
