--- a/dccwebproject/loginapp/templates/loginapp/calendar.html
+++ b/dccwebproject/loginapp/templates/loginapp/calendar.html
@@ -15,8 +15,8 @@
   <!-- Ionicons -->
   <link rel="stylesheet" href="{% static 'loginapp/bower_components/Ionicons/css/ionicons.min.css' %}">
   <!-- fullCalendar -->
-  <link rel="stylesheet" href="{% static 'loginapp/bower_components/fullcalendar/fullcalendar.min.css' %}">
-  <link rel="stylesheet" href="{% static 'loginapp/bower_components/fullcalendar/fullcalendar.print.min.css' %}" media="print">
+  <link rel="stylesheet" href="{% static 'loginapp/bower_components/fullcalendar.min.css' %}">
+  <link rel="stylesheet" href="{% static 'loginapp/bower_components/fullcalendar.print.min.css' %}" media="print">
   <!-- Theme style -->
   <link rel="stylesheet" href="{% static 'loginapp/dist/css/AdminLTE.min.css' %}">
   <!-- AdminLTE Skins. Choose a skin from the css/skins
@@ -330,7 +330,7 @@
             </ul>
           </li>
           <li>
-          <a href="{% url 'loginapp:coregister' %}">
+          <a href="{% url 'loginapp:regcoadmin' %}">
             <i class="fa fa-files-o"></i> <span>Add co-Admin</span>
 
           </a>
@@ -839,8 +839,8 @@
   <!-- AdminLTE for demo purposes -->
   <script src="{% static 'loginapp/dist/js/demo.js' %}"></script>
   <!-- fullCalendar -->
-  <script src="{% static 'loginapp/bower_components/moment/moment.js' %}"></script>
-  <script src="{% static 'loginapp/bower_components/fullcalendar/fullcalendar.min.js' %}"></script>
+  <script src="{% static 'loginapp/bower_components/moment.js' %}"></script>
+  <script src="{% static 'loginapp/bower_components/fullcalendar.min.js' %}"></script>
   <!-- Page specific script -->
 
   <script>
