--- a/dccwebproject/loginapp/templates/loginapp/index2.html
+++ b/dccwebproject/loginapp/templates/loginapp/index2.html
@@ -330,7 +330,7 @@
           </ul>
         </li>
         <li>
-        <a href="{% url 'loginapp:coregister' %}">
+        <a href="{% url 'loginapp:regcoadmin' %}">
           <i class="fa fa-files-o"></i> <span>Add co-Admin</span>
 
         </a>
