--- a/dccwebproject/loginapp/templates/loginapp/calendar.html
+++ b/dccwebproject/loginapp/templates/loginapp/calendar.html
@@ -15,8 +15,8 @@
   <!-- Ionicons -->
   <link rel="stylesheet" href="{% static 'loginapp/bower_components/Ionicons/css/ionicons.min.css' %}">
   <!-- fullCalendar -->
-  <link rel="stylesheet" href="{% static 'loginapp/bower_components/fullcalendar.min.css' %}">
-  <link rel="stylesheet" href="{% static 'loginapp/bower_components/fullcalendar.print.min.css' %}" media="print">
+  <link rel="stylesheet" href="{% static 'loginapp/bower_components/fullcalendar/fullcalendar.min.css' %}">
+  <link rel="stylesheet" href="{% static 'loginapp/bower_components/fullcalendar/fullcalendar.print.min.css' %}" media="print">
   <!-- Theme style -->
   <link rel="stylesheet" href="{% static 'loginapp/dist/css/AdminLTE.min.css' %}">
   <!-- AdminLTE Skins. Choose a skin from the css/skins
@@ -330,11 +330,11 @@
             </ul>
           </li>
           <li>
-          <a href="{% url 'loginapp:regcoadmin' %}">
+            <a href="{% url 'loginapp:regcoadmin' %}">
             <i class="fa fa-files-o"></i> <span>Add co-Admin</span>
 
           </a>
-        </li>
+          </li>
           <li>
             <a href="widgets.html">
             <i class="fa fa-th"></i> <span>Widgets</span>
@@ -839,8 +839,8 @@
   <!-- AdminLTE for demo purposes -->
   <script src="{% static 'loginapp/dist/js/demo.js' %}"></script>
   <!-- fullCalendar -->
-  <script src="{% static 'loginapp/bower_components/moment.js' %}"></script>
-  <script src="{% static 'loginapp/bower_components/fullcalendar.min.js' %}"></script>
+  <script src="{% static 'loginapp/bower_components/moment/moment.js' %}"></script>
+  <script src="{% static 'loginapp/bower_components/fullcalendar/fullcalendar.min.js' %}"></script>
   <!-- Page specific script -->
 
   <script>
@@ -849,7 +849,6 @@
       'use strict'
       var myevents = [];
       var curdate;
-
 
       //fullcalendar
       $('#calendar').fullCalendar({
@@ -865,7 +864,7 @@
         header: {
           left: 'prev,next today myCustomButton',
           center: 'title',
-          right: 'month,agendaWeek,agendaDay'
+          right: 'month,agendaWeek,agendaDay',
         },
 
         events: myevents,
@@ -873,7 +872,7 @@
         textColor: 'black',
 
         //calendar date-selection function
-        select: function(start, end, jsEvent, view) {
+        select: function (start, end, jsEvent, view) {
           var newdate = $('#calendar').fullCalendar('getDate');
           console.log(newdate);
           curdate = moment(start).format();
@@ -895,8 +894,7 @@
             // if so, remove the element from the "Draggable Events" list
             $(this).remove();
           }
-        },
-        eventDragStop: function (event, jsEvent, ui, view) {
+        }, eventDragStop: function (event, jsEvent, ui, view) {
 
           if (isEventOverDiv(jsEvent.clientX, jsEvent.clientY)) {
             $('#calendar').fullCalendar('removeEvents', event._id);
@@ -904,18 +902,19 @@
             el.draggable({
               zIndex: 999,
               revert: true,
-              revertDuration: 0
+              revertDuration: 0,
             });
             el.data('event', {
               title: event.title,
               id: event.id,
-              stick: true
+              stick: true,
             });
           }
-        }
+        },
       });
+
       //fullcalendar end
-      var isEventOverDiv = function(x, y) {
+      var isEventOverDiv = function (x, y) {
 
         var external_events = $('#external-events');
         var offset = external_events.offset();
@@ -928,13 +927,12 @@
           x <= offset.right &&
           y <= offset.bottom) {
           return true;
-        }
-        return false;
+        }   return false;
 
       };
 
       //modal-onclick function
-      $('.modal-action').click(function() {
+      $('.modal-action').click(function () {
         var eventarr = [];
         var company_name = $('#cname').val();
         var company_email = $('#email').val();
@@ -944,30 +942,30 @@
           title: title1,
           start: curdate,
           end: end1,
-          description: desc
+          description: desc,
         };
         eventarr.push(eventobj);
         myevents.push(eventobj);
+
         //add event to calendar
         $('#calendar').fullCalendar('addEventSource', eventarr);
         $('#calendar').fullCalendar('rerenderEvents');
         console.log(myevents);
       });
 
-
-      $('#external-events').each(function() {
+      $('#external-events').each(function () {
 
         // store data so the calendar knows to render an event upon drop
         $(this).data('event', {
           title: $.trim($(this).text()), // use the element's text as the event title
-          stick: true // maintain when user navigates (see docs on the renderEvent method)
+          stick: true, // maintain when user navigates (see docs on the renderEvent method)
         });
 
         // make the event draggable using jQuery UI
         $(this).draggable({
           zIndex: 999,
           revert: true, // will cause the event to go back to its
-          revertDuration: 0 //  original position after the drag
+          revertDuration: 0, //  original position after the drag
         });
 
       });
