--- a/dccwebproject/loginapp/templates/loginapp/index2.html
+++ b/dccwebproject/loginapp/templates/loginapp/index2.html
@@ -1540,7 +1540,7 @@
 <!-- SlimScroll -->
 <script src="{% static 'loginapp/bower_components/jquery-slimscroll/jquery.slimscroll.min.js' %}"></script>
 <!-- ChartJS -->
-<script src="{% static 'loginapp/bower_components/chart.js/Chart.js' %}"></script>
+<script src="{% static 'loginapp/bower_components/Chart.js' %}"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <script src="{% static 'loginapp/dist/js/pages/dashboard2.js' %}"></script>
 <!-- AdminLTE for demo purposes -->
