--- a/dccwebproject/loginapp/templates/loginapp/register.html
+++ b/dccwebproject/loginapp/templates/loginapp/register.html
@@ -271,7 +271,7 @@
               <ul class="dropdown-menu">
                 <!-- User image -->
                 <li class="user-header">
-                  <img src="{% static 'loginapp/dist/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
+
 
                 </li>
 
@@ -301,7 +301,7 @@
         <!-- Sidebar user panel -->
         <div class="user-panel">
           <div class="pull-left image">
-            <img src="{% static 'loginapp/dist/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
+
           </div>
           <div class="pull-left info">
             <p>Admin</p>
@@ -588,8 +588,7 @@
                     <div class="col-sm-4 text-center">
                       <b>{{field.label}}</b>
                       <div class="form-group has-feedback">
-                        <input name="{{field.name}}" type="text" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-pencil form-control-feedback"></span>
+                        {{field}}
                       </div>
                     </div>
                 <!--    <div class="col-sm-4 text-center">
@@ -700,18 +699,23 @@
                     </div>-->
                         {% endfor %}
                     <div class="row">
-                      <div class="col-lg-8">
+
+                      <div class="col-lg-12">
                         <div class="checkbox icheck">
                           <label>
                         <input type="checkbox"> I agree to the <a href="#">terms</a>
                       </label>
                         </div>
                       </div>
+
                       <div class="col-lg-4">
+
+                      </div>
+                      <div class="col-lg-4 ">
                         <button type="submit" class="btn btn-primary btn-block btn-flat">Register</button>
                       </div>
                       <!-- /.col -->
-                      <div class="col-lg-2">
+                      <div class="col-lg-4">
 
                       </div>
                       <!-- /.col -->
