--- a/dccwebproject/loginapp/templates/loginapp/coadmin_list.html
+++ b/dccwebproject/loginapp/templates/loginapp/coadmin_list.html
@@ -76,7 +76,8 @@
                 <li>
                   <!-- inner menu: contains the actual data -->
                   <ul class="menu">
-                    <li><!-- start message -->
+                    <li>
+                      <!-- start message -->
                       <a href="#">
                         <div class="pull-left">
                           <img src="{% static 'loginapp/dist/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
@@ -195,60 +196,60 @@
                 <li>
                   <!-- inner menu: contains the actual data -->
                   <ul class="menu">
-                    <li><!-- Task item -->
+                    <li>
+                      <!-- Task item -->
                       <a href="#">
                         <h3>
                           Design some buttons
                           <small class="pull-right">20%</small>
                         </h3>
                         <div class="progress xs">
-                          <div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar"
-                               aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                          <div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
                             <span class="sr-only">20% Complete</span>
                           </div>
                         </div>
                       </a>
                     </li>
                     <!-- end task item -->
-                    <li><!-- Task item -->
+                    <li>
+                      <!-- Task item -->
                       <a href="#">
                         <h3>
                           Create a nice theme
                           <small class="pull-right">40%</small>
                         </h3>
                         <div class="progress xs">
-                          <div class="progress-bar progress-bar-green" style="width: 40%" role="progressbar"
-                               aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                          <div class="progress-bar progress-bar-green" style="width: 40%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
                             <span class="sr-only">40% Complete</span>
                           </div>
                         </div>
                       </a>
                     </li>
                     <!-- end task item -->
-                    <li><!-- Task item -->
+                    <li>
+                      <!-- Task item -->
                       <a href="#">
                         <h3>
                           Some task I need to do
                           <small class="pull-right">60%</small>
                         </h3>
                         <div class="progress xs">
-                          <div class="progress-bar progress-bar-red" style="width: 60%" role="progressbar"
-                               aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                          <div class="progress-bar progress-bar-red" style="width: 60%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
                             <span class="sr-only">60% Complete</span>
                           </div>
                         </div>
                       </a>
                     </li>
                     <!-- end task item -->
-                    <li><!-- Task item -->
+                    <li>
+                      <!-- Task item -->
                       <a href="#">
                         <h3>
                           Make beautiful transitions
                           <small class="pull-right">80%</small>
                         </h3>
                         <div class="progress xs">
-                          <div class="progress-bar progress-bar-yellow" style="width: 80%" role="progressbar"
-                               aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                          <div class="progress-bar progress-bar-yellow" style="width: 80%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
                             <span class="sr-only">80% Complete</span>
                           </div>
                         </div>
@@ -323,21 +324,22 @@
         <ul class="sidebar-menu" data-widget="tree">
           <li class="header">MAIN NAVIGATION</li>
           <li class="treeview">
-            <a href="#">
-              <i class="fa fa-dashboard"></i> <span>Dashboard</span>
-              <span class="pull-right-container">
-                <i class="fa fa-angle-left pull-right"></i>
-              </span>
-            </a>
-            <ul class="treeview-menu">
-              <li><a href="{% url 'loginapp:dash1' %}"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-              <li><a href="{% url 'loginapp:dash2' %}"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
-            </ul>
+            <li><a href="{% url 'loginapp:dash2' %}"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
           </li>
           <li class="active">
-          <a href="{% url 'loginapp:regcoadmin' %}">
-            <i class="fa fa-files-o"></i> <span>Add co-Admin</span>
+            <a href="{% url 'loginapp:regengg' %}">
+            <i class="fa fa-files-o"></i> <span>Add Engineer</span>
 
+          </a>
+          </li>
+          <li>
+            <a href="{% url 'loginapp:regcustom' %}">
+          <i class="fa fa-files-o"></i> <span>Add Customer</span>
+        </a>
+          </li>
+          <li>
+          <a href="{% url 'loginapp:getengg' %}">
+            <i class="fa fa-files-o"></i> <span>Engineers List</span>
           </a>
         </li>
           <li>
@@ -574,169 +576,55 @@
 
             <div class="container">
               <div class="row">
-                <div class="register-logo ">
-                  <a href="{% url 'loginapp:dash1' %}"><b>co-Admin Registration</b></a>
-                </div>
+                     <div class="col-xs-12">
+                       <div class="box">
+                         <div class="box-header">
+                           <h3 class="box-title">Engineers List</h3>
 
-                <div class=" register-box-body ">
-                  <p class="login-box-msg">Register a new co-Admin</p>
+                           <div class="box-tools">
+                             <div class="input-group input-group-sm" style="width: 150px;">
+                               <input type="text" name="table_search" class="form-control pull-right" placeholder="Search">
 
-                  <form method="post" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    {% for field in form %}
-                    {{field.errors}}
-                    <div class="col-sm-4 text-center">
-                      <b>{{field.label}}</b>
-                      <div class="form-group has-feedback">
-                        {{field}}
-                      </div>
-                    </div>
-                <!--    <div class="col-sm-4 text-center">
-                      <b>Full name</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_name}}" type="text" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-user form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Email Id</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_email}}" type="email" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Contact No</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_number}}" type="text" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-phone form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Telephone No</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_telephone}}" type="text" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-phone-alt form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>City</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_city}}" type="textarea" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-map-marker form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Branch Code</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_branch_code}}" type="text" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-barcode form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Gender</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_gender}}" type="text" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-user form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Birthday</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_bdate}}" type="date" class="form-control" placeholder="Birth Date">
-                        <span class="glyphicon glyphicon-calendar form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Age</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_age}}" type="number" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-bitcoin form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Joining Date</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_joining_date}}" type="date" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-calendar form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Qualification</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_qualification}}" type="text" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-certificate form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Designation</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_designation}}" type="text" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-certificate form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Photo</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_photo}}" type="file" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-picture form-control-feedback"></span>
-                      </div>
-                    </div>
+                               <div class="input-group-btn">
+                                 <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+                               </div>
+                             </div>
+                           </div>
+                         </div>
+                         <!-- /.box-header -->
+                         <div class="box-body table-responsive no-padding">
 
-                    <div class="col-sm-4 text-center">
-                      <b>Password</b>
-                      <div class="form-group has-feedback ">
-                        <input name="{{field.coadmin_password}}" type="password" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Retype password</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_conf_pass}}" type="password" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
-                      </div>
-                    </div>-->
-                        {% endfor %}
-                    <div class="row">
+                           <table class="table table-hover">
+                             <tr>
+                               <th>ID</th>
+                               <th>User</th>
+                               <th>Contact</th>
+                               <th>City</th>
+                                <th>Branch Code</th>
+                               <th>Status</th>
+                               <th>Address</th>
+                             </tr>
+                              {% for list in coadminobj %}
+                             <tr>
+                               <td>{{list.id}}</td>
+                               <td><a href="{% url 'loginapp:coadmindetail' list.id %}">{{list.co_name}}</a></td>
+                               <td>{{list.contact_number}}</td>
+                                <td>{{list.co_city}}</td>
+                                  <td>{{list.branch_code}}</td>
+                               <td><span class="label label-success">Online</span></td>
+                               <td>{{list.co_address}}</td>
+                               <td><a href="{% url 'loginapp:coadminupdate' list.id %}">update</a></td>
 
-                      <div class="col-lg-12">
-                        <div class="checkbox icheck">
-                          <label>
-                        <input type="checkbox"> I agree to the <a href="#">terms</a>
-                      </label>
-                        </div>
-                      </div>
+                             </tr>
+                                 {%endfor%}
+                           </table>
 
-                      <div class="col-lg-4">
-
-                      </div>
-                      <div class="col-lg-4 ">
-                        <button type="submit" class="btn btn-primary btn-block btn-flat">Register</button>
-                      </div>
-                      <!-- /.col -->
-                      <div class="col-lg-4">
-
-                      </div>
-                      <!-- /.col -->
-                    </div>
-
-                  </form>
-
-
-                </div>
-                <!-- /.form-box -->
-              </div>
-            </div>
-            <!-- /.register-box -->
-
-
-
-          </section>
-          <!-- /.Left col -->
-
-        </div>
-        <!-- /.row (main row) -->
+                         </div>
+                         <!-- /.box-body -->
+                       </div>
+                       <!-- /.box -->
+                     </div>
+                   </div>
 
       </section>
       <!-- /.content -->
@@ -746,8 +634,7 @@
       <div class="pull-right hidden-xs">
         <b>Version</b> 1.1.0
       </div>
-      <strong>Copyright &copy; 2017-2018 <a href="https://www.ganakcomputers.com/">Ganak Computers</a>.</strong> All rights
-      reserved.
+      <strong>Copyright &copy; 2017-2018 <a href="https://www.ganakcomputers.com/">Ganak Computers</a>.</strong> All rights reserved.
     </footer>
 
     <!-- Control Sidebar -->
