--- a/dccwebproject/loginapp/templates/loginapp/index2.html
+++ b/dccwebproject/loginapp/templates/loginapp/index2.html
@@ -42,7 +42,7 @@
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>A</b>LT</span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>Admin</b></span>
+      <span class="logo-lg"><b>co-Admin</b></span>
     </a>
 
     <!-- Header Navbar: style can be found in header.less -->
@@ -255,17 +255,14 @@
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <img src="{% static 'loginapp/dist/img/user2-160x160.jpg' %}" class="user-image" alt="User Image">
-              <span class="hidden-xs">Admin</span>
+              <span class="hidden-xs">co-Admin</span>
             </a>
             <ul class="dropdown-menu">
               <!-- User image -->
               <li class="user-header">
                 <img src="{% static 'loginapp/dist/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
 
-                <p>
-                  Admin - Web Developer
-                  <small>Member since Nov. 2012</small>
-                </p>
+
               </li>
 
               <!-- Menu Footer-->
@@ -298,7 +295,7 @@
           <img src="{% static 'loginapp/dist/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
-          <p>Admin</p>
+          <p>co-Admin</p>
           <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
         </div>
       </div>
@@ -318,23 +315,24 @@
       <ul class="sidebar-menu" data-widget="tree">
         <li class="header">MAIN NAVIGATION</li>
         <li class="active treeview menu-open">
-          <a href="#">
-            <i class="fa fa-dashboard"></i> <span>Dashboard</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li><a href="{% url 'loginapp:dash1' %}"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-            <li class="active"><a href="#"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
-          </ul>
+        <li class="active"><a href="#"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
         </li>
         <li>
-        <a href="{% url 'loginapp:regcoadmin' %}">
-          <i class="fa fa-files-o"></i> <span>Add co-Admin</span>
+        <a href="{% url 'loginapp:regengg' %}">
+          <i class="fa fa-files-o"></i> <span>Add Engineer</span>
 
         </a>
       </li>
+      <li>
+      <a href="{% url 'loginapp:regcustom' %}">
+        <i class="fa fa-files-o"></i> <span>Add customer</span>
+      </a>
+    </li>
+    <li>
+    <a href="{% url 'loginapp:getengg' %}">
+      <i class="fa fa-files-o"></i> <span>Engineers List</span>
+    </a>
+  </li>
         <li>
           <a href="pages/widgets.html">
             <i class="fa fa-th"></i> <span>Widgets</span>
@@ -770,7 +768,7 @@
                     <!-- Message. Default to the left -->
                     <div class="direct-chat-msg">
                       <div class="direct-chat-info clearfix">
-                        <span class="direct-chat-name pull-left">Admin</span>
+                        <span class="direct-chat-name pull-left">co-Admin</span>
                         <span class="direct-chat-timestamp pull-right">23 Jan 2:00 pm</span>
                       </div>
                       <!-- /.direct-chat-info -->
@@ -802,7 +800,7 @@
                     <!-- Message. Default to the left -->
                     <div class="direct-chat-msg">
                       <div class="direct-chat-info clearfix">
-                        <span class="direct-chat-name pull-left">Admin</span>
+                        <span class="direct-chat-name pull-left">co-Admin</span>
                         <span class="direct-chat-timestamp pull-right">23 Jan 5:37 pm</span>
                       </div>
                       <!-- /.direct-chat-info -->
@@ -968,7 +966,7 @@
                   <ul class="users-list clearfix">
                     <li>
                       <img src="{% static 'loginapp/dist/img/user1-128x128.jpg' %}" alt="User Image">
-                      <a class="users-list-name" href="#">Admin</a>
+                      <a class="users-list-name" href="#">co-Admin</a>
                       <span class="users-list-date">Today</span>
                     </li>
                     <li>
