--- a/dccwebproject/loginapp/templates/loginapp/engglist.html
+++ b/dccwebproject/loginapp/templates/loginapp/engglist.html
@@ -342,14 +342,7 @@
             <i class="fa fa-files-o"></i> <span>Engineers List</span>
           </a>
         </li>
-          <li>
-            <a href="pages/widgets.html">
-              <i class="fa fa-th"></i> <span>Widgets</span>
-              <span class="pull-right-container">
-                <small class="label pull-right bg-green">new</small>
-              </span>
-            </a>
-          </li>
+          
           <li class="treeview">
             <a href="#">
               <i class="fa fa-pie-chart"></i>
@@ -530,6 +523,7 @@
                                 <th>Branch Code</th>
                                <th>Status</th>
                                <th>Address</th>
+                                <th>Edit</th>
                              </tr>
                               {% for list in enggobj %}
                              <tr>
