--- a/dccwebproject/loginapp/templates/loginapp/callallocate_update.html
+++ b/dccwebproject/loginapp/templates/loginapp/callallocate_update.html
@@ -1,4 +1,5 @@
 {%load staticfiles%}
+{%load bootstrap%}
 <!DOCTYPE html>
 <html>
 
@@ -76,8 +77,7 @@
                 <li>
                   <!-- inner menu: contains the actual data -->
                   <ul class="menu">
-                    <li>
-                      <!-- start message -->
+                    <li><!-- start message -->
                       <a href="#">
                         <div class="pull-left">
                           <img src="{% static 'loginapp/dist/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
@@ -196,60 +196,60 @@
                 <li>
                   <!-- inner menu: contains the actual data -->
                   <ul class="menu">
-                    <li>
-                      <!-- Task item -->
+                    <li><!-- Task item -->
                       <a href="#">
                         <h3>
                           Design some buttons
                           <small class="pull-right">20%</small>
                         </h3>
                         <div class="progress xs">
-                          <div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                          <div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar"
+                               aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
                             <span class="sr-only">20% Complete</span>
                           </div>
                         </div>
                       </a>
                     </li>
                     <!-- end task item -->
-                    <li>
-                      <!-- Task item -->
+                    <li><!-- Task item -->
                       <a href="#">
                         <h3>
                           Create a nice theme
                           <small class="pull-right">40%</small>
                         </h3>
                         <div class="progress xs">
-                          <div class="progress-bar progress-bar-green" style="width: 40%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                          <div class="progress-bar progress-bar-green" style="width: 40%" role="progressbar"
+                               aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
                             <span class="sr-only">40% Complete</span>
                           </div>
                         </div>
                       </a>
                     </li>
                     <!-- end task item -->
-                    <li>
-                      <!-- Task item -->
+                    <li><!-- Task item -->
                       <a href="#">
                         <h3>
                           Some task I need to do
                           <small class="pull-right">60%</small>
                         </h3>
                         <div class="progress xs">
-                          <div class="progress-bar progress-bar-red" style="width: 60%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                          <div class="progress-bar progress-bar-red" style="width: 60%" role="progressbar"
+                               aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
                             <span class="sr-only">60% Complete</span>
                           </div>
                         </div>
                       </a>
                     </li>
                     <!-- end task item -->
-                    <li>
-                      <!-- Task item -->
+                    <li><!-- Task item -->
                       <a href="#">
                         <h3>
                           Make beautiful transitions
                           <small class="pull-right">80%</small>
                         </h3>
                         <div class="progress xs">
-                          <div class="progress-bar progress-bar-yellow" style="width: 80%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                          <div class="progress-bar progress-bar-yellow" style="width: 80%" role="progressbar"
+                               aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
                             <span class="sr-only">80% Complete</span>
                           </div>
                         </div>
@@ -324,24 +324,28 @@
         <ul class="sidebar-menu" data-widget="tree">
           <li class="header">MAIN NAVIGATION</li>
           <li class="treeview">
-            <li><a href="{% url 'loginapp:dash2' %}"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
-          </li>
-          <li>
-            <a href="{% url 'loginapp:regengg' %}">
-            <i class="fa fa-files-o"></i> <span>Add Engineer</span>
-
-          </a>
+              <li><a href="{% url 'loginapp:dash1' %}"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
           </li>
           <li class="active">
-            <a href="{% url 'loginapp:regcustom' %}">
-          <i class="fa fa-files-o"></i> <span>Add Customer</span>
-        </a>
-          </li>
-          <li>
-          <a href="{% url 'loginapp:getengg' %}">
-            <i class="fa fa-files-o"></i> <span>Engineers List</span>
+          <a href="{% url 'loginapp:regcoadmin' %}">
+            <i class="fa fa-files-o"></i> <span>Add co-Admin</span>
           </a>
         </li>
+        <li>
+        <a href="{% url 'loginapp:regengg' %}">
+          <i class="fa fa-files-o"></i> <span>Add Engg</span>
+        </a>
+      </li>
+      <li>
+      <a href="{% url 'loginapp:regcustom' %}">
+        <i class="fa fa-files-o"></i> <span>Add Customer</span>
+      </a>
+    </li>
+    <li>
+    <a href="{% url 'loginapp:getengg' %}">
+      <i class="fa fa-files-o"></i> <span>Engineers List</span>
+    </a>
+  </li>
           
           <li class="treeview">
             <a href="#">
@@ -487,237 +491,52 @@
       <section class="content-header">
         <h1>
           Dashboard
-          <small>Control panel</small>
+          <small><a href="{% url 'loginapp:calendar' %}">Calender</a></small>
         </h1>
         <ol class="breadcrumb">
           <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-          <li class="active">Dashboard</li>
+          <li class="active">Calender</li>
         </ol>
       </section>
-
-      <!-- Main content -->
-      <section class="content">
-        <!-- Small boxes (Stat box) -->
-        <div class="row">
-          <div class="col-lg-3 col-xs-6">
-            <!-- small box -->
-            <div class="small-box bg-aqua">
-              <div class="inner">
-                <h3>150</h3>
-
-                <p>New Calls</p>
-              </div>
-              <div class="icon">
-                <i class="ion ion-bag"></i>
-              </div>
-              <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
-            </div>
-          </div>
-          <!-- ./col -->
-          <div class="col-lg-3 col-xs-6">
-            <!-- small box -->
-            <div class="small-box bg-green">
-              <div class="inner">
-                <h3>53<sup style="font-size: 20px">%</sup></h3>
-
-                <p>Reports</p>
-              </div>
-              <div class="icon">
-                <i class="ion ion-stats-bars"></i>
-              </div>
-              <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
-            </div>
-          </div>
-          <!-- ./col -->
-          <div class="col-lg-3 col-xs-6">
-            <!-- small box -->
-            <div class="small-box bg-yellow">
-              <div class="inner">
-                <h3>44</h3>
-
-                <p>Client Registrations</p>
-              </div>
-              <div class="icon">
-                <i class="ion ion-person-add"></i>
-              </div>
-              <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
-            </div>
-          </div>
-          <!-- ./col -->
-          <div class="col-lg-3 col-xs-6">
-            <!-- small box -->
-            <div class="small-box bg-red">
-              <div class="inner">
-                <h3>65</h3>
-
-                <p>Closed Calls</p>
-              </div>
-              <div class="icon">
-                <i class="ion ion-pie-graph"></i>
-              </div>
-              <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
-            </div>
-          </div>
-          <!-- ./col -->
-        </div>
-        <!-- /.row -->
-        <!-- Main row -->
-        <div class="row ">
-          <!-- Left col -->
-          <section class="col-lg-7 connectedSortable">
-            <!-- Custom tabs (Charts with tabs)-->
 
             <div class="container">
               <div class="row">
                 <div class="register-logo ">
-                  <a href="{% url 'loginapp:regcustom' %}"><b>Customer Registration</b></a>
+                  <a href="#"><b>Call Allocate</b></a>
                 </div>
                 <div class=" register-box-body ">
-                  <p class="login-box-msg">Register a new Customer</p>
+                  <p class="container">Call Allocation Update Form</p>
 
-                  <form method="post" action="{% url 'loginapp:regcustom' %}" enctype="multipart/form-data">
+                  <form method="POST" name="MyForm" action="{% url 'loginapp:eventupdate' callallocate.id %}" enctype="multipart/form-data">
                     {% csrf_token %}
+
                     <div class="col-lg-12">
                       <b></b>
+
                       <div class="form-group has-feedback table-responsive">
-                        <table class="table">
-                          {{ customform.as_table }}
-                        </table>
-                      </div>
-                    </div>
+                      <table class="table">
 
+                        {{ form|bootstrap }}
+                      </table>
 
+                      </div>
 
-                    <!--    <div class="col-sm-4 text-center">
-                      <b>Full name</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_name}}" type="text" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-user form-control-feedback"></span>
-                      </div>
                     </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Email Id</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_email}}" type="email" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Contact No</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_number}}" type="text" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-phone form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Telephone No</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_telephone}}" type="text" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-phone-alt form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>City</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_city}}" type="textarea" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-map-marker form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Branch Code</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_branch_code}}" type="text" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-barcode form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Gender</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_gender}}" type="text" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-user form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Birthday</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_bdate}}" type="date" class="form-control" placeholder="Birth Date">
-                        <span class="glyphicon glyphicon-calendar form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Age</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_age}}" type="number" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-bitcoin form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Joining Date</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_joining_date}}" type="date" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-calendar form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Qualification</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_qualification}}" type="text" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-certificate form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Designation</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_designation}}" type="text" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-certificate form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Photo</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_photo}}" type="file" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-picture form-control-feedback"></span>
-                      </div>
-                    </div>
-
-                    <div class="col-sm-4 text-center">
-                      <b>Password</b>
-                      <div class="form-group has-feedback ">
-                        <input name="{{field.coadmin_password}}" type="password" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Retype password</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_conf_pass}}" type="password" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
-                      </div>
-                    </div>-->
 
                     <div class="row">
-
-                      <!--  <div class="col-lg-12">
-                        <div class="checkbox icheck">
-                          <label>
-                        <input type="checkbox"> I agree to the <a href="#">terms</a>
-                      </label>
-                        </div>
-                      </div>-->
-
-                      <div class="col-lg-4">
-
+                      <div class="col-lg-4 ">
+                        <button type="submit" class="btn btn-primary btn-block btn-flat">Update</button>
                       </div>
                       <div class="col-lg-4 ">
-                        <button type="submit" class="btn btn-primary btn-block btn-flat">Register</button>
+                        <button type="submit" onclick="document.forms['MyForm'].action = '{% url 'loginapp:eventdelete' callallocate.id %}'" class="btn btn-primary btn-block btn-flat">Delete</button>
                       </div>
                       <!-- /.col -->
-
+                      <div class="col-lg-12">
+                      </div>
                       <!-- /.col -->
                     </div>
 
                   </form>
-
 
                 </div>
                 <!-- /.form-box -->
@@ -741,7 +560,8 @@
       <div class="pull-right hidden-xs">
         <b>Version</b> 1.1.0
       </div>
-      <strong>Copyright &copy; 2017-2018 <a href="https://www.ganakcomputers.com/">Ganak Computers</a>.</strong> All rights reserved.
+      <strong>Copyright &copy; 2017-2018 <a href="https://www.ganakcomputers.com/">Ganak Computers</a>.</strong> All rights
+      reserved.
     </footer>
 
     <!-- Control Sidebar -->
