--- a/dccwebproject/loginapp/templates/loginapp/calllist.html
+++ b/dccwebproject/loginapp/templates/loginapp/calllist.html
@@ -326,13 +326,13 @@
           <li class="treeview">
             <li><a href="{% url 'loginapp:dash2' %}"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
           </li>
-          <li>
+          <li class="active">
             <a href="{% url 'loginapp:regengg' %}">
             <i class="fa fa-files-o"></i> <span>Add Engineer</span>
 
           </a>
           </li>
-          <li class="active">
+          <li>
             <a href="{% url 'loginapp:regcustom' %}">
           <i class="fa fa-files-o"></i> <span>Add Customer</span>
         </a>
@@ -494,244 +494,58 @@
           <li class="active">Dashboard</li>
         </ol>
       </section>
-
-      <!-- Main content -->
-      <section class="content">
-        <!-- Small boxes (Stat box) -->
-        <div class="row">
-          <div class="col-lg-3 col-xs-6">
-            <!-- small box -->
-            <div class="small-box bg-aqua">
-              <div class="inner">
-                <h3>150</h3>
-
-                <p>New Calls</p>
-              </div>
-              <div class="icon">
-                <i class="ion ion-bag"></i>
-              </div>
-              <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
-            </div>
-          </div>
-          <!-- ./col -->
-          <div class="col-lg-3 col-xs-6">
-            <!-- small box -->
-            <div class="small-box bg-green">
-              <div class="inner">
-                <h3>53<sup style="font-size: 20px">%</sup></h3>
-
-                <p>Reports</p>
-              </div>
-              <div class="icon">
-                <i class="ion ion-stats-bars"></i>
-              </div>
-              <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
-            </div>
-          </div>
-          <!-- ./col -->
-          <div class="col-lg-3 col-xs-6">
-            <!-- small box -->
-            <div class="small-box bg-yellow">
-              <div class="inner">
-                <h3>44</h3>
-
-                <p>Client Registrations</p>
-              </div>
-              <div class="icon">
-                <i class="ion ion-person-add"></i>
-              </div>
-              <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
-            </div>
-          </div>
-          <!-- ./col -->
-          <div class="col-lg-3 col-xs-6">
-            <!-- small box -->
-            <div class="small-box bg-red">
-              <div class="inner">
-                <h3>65</h3>
-
-                <p>Closed Calls</p>
-              </div>
-              <div class="icon">
-                <i class="ion ion-pie-graph"></i>
-              </div>
-              <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
-            </div>
-          </div>
-          <!-- ./col -->
-        </div>
-        <!-- /.row -->
-        <!-- Main row -->
-        <div class="row ">
-          <!-- Left col -->
-          <section class="col-lg-7 connectedSortable">
-            <!-- Custom tabs (Charts with tabs)-->
-
             <div class="container">
               <div class="row">
-                <div class="register-logo ">
-                  <a href="{% url 'loginapp:regcustom' %}"><b>Customer Registration</b></a>
-                </div>
-                <div class=" register-box-body ">
-                  <p class="login-box-msg">Register a new Customer</p>
+                     <div class="col-xs-12">
+                       <div class="box">
+                         <div class="box-header">
+                           <h3 class="box-title">Call List</h3>
 
-                  <form method="post" action="{% url 'loginapp:regcustom' %}" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    <div class="col-lg-12">
-                      <b></b>
-                      <div class="form-group has-feedback table-responsive">
-                        <table class="table">
-                          {{ customform.as_table }}
-                        </table>
-                      </div>
-                    </div>
+                           <div class="box-tools">
+                             <div class="input-group input-group-sm" style="width: 150px;">
+                               <input type="text" name="table_search" class="form-control pull-right" placeholder="Search">
 
+                               <div class="input-group-btn">
+                                 <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+                               </div>
+                             </div>
+                           </div>
+                         </div>
+                         <!-- /.box-header -->
+                         <div class="box-body table-responsive no-padding">
 
+                           <table class="table table-hover">
+                             <tr>
+                               <th>ID</th>
+                               <th>Client Name</th>
+                               <th>Contact</th>
+                               <th>City</th>
+                                <th>Email</th>
+                               <th>Problem</th>
+                               <th>Call Status</th>
+                               <th>Engineer Name</th>
+                             </tr>
+                              {% for list in callobj %}
+                             <tr>
+                               <td>{{list.id}}</td>
+                               <td><a href="{% url 'loginapp:eventupdate' list.id %}">{{list.title}}</a></td>
+                               <td>{{list.phone_number}}</td>
+                                <td>{{list.cust_city}}</td>
+                                  <td>{{list.comp_email}}</td>
+                               <td>{{list.description}}</td>
+                               <td>{{list.call_status}}</td>
+                               <td>{{list.engg_name}}</td>
 
-                    <!--    <div class="col-sm-4 text-center">
-                      <b>Full name</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_name}}" type="text" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-user form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Email Id</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_email}}" type="email" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Contact No</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_number}}" type="text" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-phone form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Telephone No</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_telephone}}" type="text" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-phone-alt form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>City</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_city}}" type="textarea" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-map-marker form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Branch Code</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_branch_code}}" type="text" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-barcode form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Gender</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_gender}}" type="text" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-user form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Birthday</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_bdate}}" type="date" class="form-control" placeholder="Birth Date">
-                        <span class="glyphicon glyphicon-calendar form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Age</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_age}}" type="number" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-bitcoin form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Joining Date</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_joining_date}}" type="date" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-calendar form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Qualification</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_qualification}}" type="text" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-certificate form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Designation</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_designation}}" type="text" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-certificate form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Photo</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_photo}}" type="file" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-picture form-control-feedback"></span>
-                      </div>
-                    </div>
+                             </tr>
+                                 {%endfor%}
+                           </table>
 
-                    <div class="col-sm-4 text-center">
-                      <b>Password</b>
-                      <div class="form-group has-feedback ">
-                        <input name="{{field.coadmin_password}}" type="password" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                      <b>Retype password</b>
-                      <div class="form-group has-feedback">
-                        <input name="{{field.coadmin_conf_pass}}" type="password" class="form-control" placeholder="">
-                        <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
-                      </div>
-                    </div>-->
-
-                    <div class="row">
-
-                      <!--  <div class="col-lg-12">
-                        <div class="checkbox icheck">
-                          <label>
-                        <input type="checkbox"> I agree to the <a href="#">terms</a>
-                      </label>
-                        </div>
-                      </div>-->
-
-                      <div class="col-lg-4">
-
-                      </div>
-                      <div class="col-lg-4 ">
-                        <button type="submit" class="btn btn-primary btn-block btn-flat">Register</button>
-                      </div>
-                      <!-- /.col -->
-
-                      <!-- /.col -->
-                    </div>
-
-                  </form>
-
-
-                </div>
-                <!-- /.form-box -->
-              </div>
-            </div>
-            <!-- /.register-box -->
-
-
-
-          </section>
-          <!-- /.Left col -->
-
-        </div>
-        <!-- /.row (main row) -->
+                         </div>
+                         <!-- /.box-body -->
+                       </div>
+                       <!-- /.box -->
+                     </div>
+                   </div>
 
       </section>
       <!-- /.content -->
